--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -8,16 +8,16 @@ permissions:
   contents: read
 
 env:
-  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  ARM_CLIENT_ID: ${{ secret.AZURE_CLIENT_ID}}
+  ARM_CLIENT_SECRET: ${{ secret.AZURE_CLIENT_SECRET}}
+  ARM_SUBSCRIPTION_ID: ${{ secret.AZURE_SUBSCRIPTION_ID}}
+  ARM_TENANT_ID: ${{ secret.AZURE_TENANT_ID}}
 
 jobs:
   terraform-plan:
-    name: 'Terraform'
+    name: 'Terraform Plan'
     runs-on: ubuntu-latest
-    environment: production
+
 
     steps:
     # Checkout the repository to the GitHub Actions runner
@@ -47,3 +47,33 @@ jobs:
       with:
         name: tfplan
         path: tfplan
+
+  terraform-apply:
+    name: 'Terraform Apply'
+    runs-on: ubuntu-latest
+    needs: terraform-plan
+
+    steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Download Terraform Plan
+      uses: actions/download-artifact@v2
+      with:
+        name: tfplan
+        path: .
+    
+    - name: Terraform Apply
+      run: terraform apply -auto-approve tfplan
+
+
+    
